fixed up dark mode colors

--- a/style2.css
+++ b/style2.css
@@ -62,6 +62,14 @@ body.dark-mode {
     --bulb: var(--black);
     --bulb-hover: var(--dark);
     --bulb-stroke: var(--light);
+
+  --link-clr: var(--accent-clr);
+  --link-hvr-bg-clr: var(--light);
+  --link-hvr-txt-clr: var(--dark);
+
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-stroke: 0.45px rgba(0, 0, 0, 0.1);
 }
 
 /*MAIN CSS*/
@@ -92,7 +100,7 @@ body {
 }
 
 .page-title::before {
-  content: "\2740";
+  content: "\2766";
   padding-right: 10px;
 }
 
@@ -318,7 +326,7 @@ ul, .links {
   margin-right: 20px;
   line-height: 1.4;
   padding: 0.2em 0;
-  transition: ease-in 200ms;
+  /* transition: ease-in 200ms; */
 }
 li {
   margin: 20px;
@@ -326,22 +334,22 @@ li {
 
 main a,
 .faux-link {
-  color: var(--text-clr);
+  color: var(--link-clr);
   text-decoration: none;
   padding: 0 0.2em;
 
   background-image: linear-gradient(var(--bg-clr), var(--bg-clr)),
-    linear-gradient(var(--text-clr), var(--text-clr)),
+    linear-gradient(var(--link-clr), var(--link-clr)),
     linear-gradient(var(--accent-clr), var(--accent-clr));
-  background-size: 20px 1px, 100% 1px, 0 1px;
-  background-position: calc(20px * -1) 100%, 100% 100%, 0 100%;
-  background-repeat: no-repeat;
-  transition: background-size 400ms ease-in-out, background-position 400ms ease-in-out;
+    background-size: 20px 1px, 100% 1px, 0 1px;
+    background-position: calc(20px * -1) 100%, 100% 100%, 0 100%;
+    background-repeat: no-repeat;
+    transition: background-size 400ms ease-in-out, background- 400ms ease-in-out;
 }
 
 a:hover,
 .faux-link:hover {
-  background-size: 20px 2px, 0 2px, 100% 2px;
+  background-size: 20px 1px, 0 1px, 100% 1px;
   background-position: calc(100% + 20px) 100%, 100% 100%, 0 100%;
   text-decoration: none;
 }
@@ -353,6 +361,7 @@ a:focus,
   outline: none;
   padding: 0 0.2em;
   text-decoration: none;
+  transition: background-position none;
 }
 
 .artie img {
